Fix bugs and add guide